--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -20,6 +20,15 @@
                         <span class="hidden-sm" data-translate="global.menu.home">Home</span>
                     </a>
                 </li>
+                <!-- SHOPPING HERE! -->
+                <li ui-sref-active="active" has-authority="ROLE_ADMIN">
+                    <a ui-sref="shop">
+                        <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;
+                        <span >Shopping</span>
+                    </a>
+                </li>
+                <!-- SHOPPING HERE! -->
+
                 <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
                 <li ng-class="{active: vm.$state.includes('entity')}" ng-switch-when="true" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="entity-menu">
@@ -65,6 +74,7 @@
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
+
                 <li ng-class="{active: vm.$state.includes('account')}" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="account-menu">
                         <span>
@@ -176,6 +186,7 @@
                         </li>
                     </ul>
                 </li>
+
             </ul>
         </div>
     </div>
